--- a/Gemfile.erb
+++ b/Gemfile.erb
@@ -17,8 +17,8 @@ group :doc do
 <%-   end -%>
   gem 'yard',       '~> 0.6.0'
 end
-<%- end -%>
 
-<%- if enabled?(:rspec) -%>
+<%- end
+    if enabled?(:rspec) -%>
 gem 'rspec',    '~> 2.0.0', :group => [:development, :test]
 <%- end -%>
