--- a/Gemfile.erb
+++ b/Gemfile.erb
@@ -1,24 +1,8 @@
 source :rubygems
 
-gemspec
+require 'ore/bundler'
 
 group :development do
   gem 'rake',     '~> 0.8.7'
   gem 'bundler',  '~> 1.0.0'
 end
-
-<%- if yard? -%>
-group :doc do
-<%-   case @markup
-      when :markdown -%>
-  gem 'bluecloth',  '~> 2.0.0'
-<%-   when :textile -%>
-  gem 'RedCloth',   '~> 4.2.3'
-<%-   end -%>
-  gem 'yard',       '~> 0.6.0'
-end
-
-<%- end
-    if enabled?(:rspec) -%>
-gem 'rspec',    '~> 2.0.0', :group => [:development, :test]
-<%- end -%>
