--- a/Gemfile.erb
+++ b/Gemfile.erb
@@ -3,6 +3,7 @@ source :rubygems
 gemspec
 
 group :development do
+  gem 'rake',     '~> 0.8.7'
 <%- if yard?
       case @markup
       when :markdown -%>
