--- a/Gemfile.erb
+++ b/Gemfile.erb
@@ -4,17 +4,5 @@ gemspec
 
 group :development do
   gem 'rake',     '~> 0.8.7'
-<%- if yard?
-      case @markup
-      when :markdown -%>
-  case RUBY_PLATFORM
-  when 'java'
-    gem 'maruku'
-  else
-    gem 'bluecloth', '>= 2.0.0'
-  end
-<%-   when :textile -%>
-  gem 'RedCloth'
-<%-   end
-    end -%>
+<%= includes :gemfile, '' -%>
 end
