Renamed _gemfile.erb includes to _gemfile_development.erb.

--- a/Gemfile.erb
+++ b/Gemfile.erb
@@ -1,8 +1,12 @@
 source :rubygems
 
+<%= includes :gemfile_header -%>
+
 gemspec
+
+<%= includes :gemfile -%>
 
 group :development do
   gem 'rake',     '~> 0.8.7'
-<%= includes :gemfile, '' -%>
+<%= includes :gemfile_development, '' -%>
 end
