Use the dependencies and development_dependencies variables.

--- a/Gemfile.erb
+++ b/Gemfile.erb
@@ -9,8 +9,16 @@ gemspec
 <%- includes(:gemfile,'') do |gemfile| -%>
 <%= gemfile %>
 
+<%- @dependencies.each do |name,version| -%>
+  gem '<%= name %>',  '<%- version %>'
+<%- end -%>
+
 <%- end -%>
 group :development do
-  gem 'rake',     '~> 0.8.7'
-<%= includes :gemfile_development, '' -%>
+  gem 'rake', '~> 0.8.7'
+<%= includes(:gemfile_development,'') %>
+
+<%- @development_dependencies.each do |name,version| -%>
+  gem '<%= name %>',  '<%- version %>'
+<%- end -%>
 end
