--- a/_tasks.erb
+++ b/_tasks.erb
@@ -1,3 +1,3 @@
-<%- unless (jeweler_tasks? || ore_tasks?) -%>
+<%- unless (jeweler_tasks? || rubygems_tasks?) -%>
 Bundler::GemHelper.install_tasks
 <%- end -%>
