Re-add support for the _gemfile_development includes.

--- a/Gemfile.erb
+++ b/Gemfile.erb
@@ -9,3 +9,9 @@ gemspec
 
 <%= gemfile %>
 <%- end -%>
+<%- includes(:gemfile_development,'') do |gemfile| -%>
+
+group :development do
+<%= gemfile %>
+end
+<%- end -%>
