Add extra_devel group

--- a/Gemfile.erb
+++ b/Gemfile.erb
@@ -15,3 +15,9 @@ group :development do
 <%= gemfile -%>
 end
 <%- end -%>
+<%- includes(:gemfile_extra_devel,'') do |gemfile| -%>
+
+group :extra_devel do
+<%= gemfile -%>
+end
+<%- end -%>
